Pushing what is left to dev branch
Then we merge to main branch
